--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -24,6 +24,26 @@ jobs:
       - run: cd $WORKDIR && flake8 --exclude tests/output/
       - run: cd $WORKDIR && ansible-test sanity
 
+  units-test:
+    runs-on: [self-hosted]
+    container: python:3.10-slim-buster
+    env:
+      WORKDIR: /work-dir/ansible_collections/scale_computing/hypercore
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - run: pip3 install -r sanity.requirements -r test.requirements -r docs.requirements
+      - run: apt update
+      - run: apt install -y git make
+      - run: pip install ansible-core==2.13.1
+        # ansible-test needs special directory structure.
+      - run: mkdir -p $WORKDIR
+      - run: cp -a ./  $WORKDIR
+        # Same as "make units"
+        # TODO reuse Makefile
+      - run: cd $WORKDIR && ansible-test units --docker --coverage
+      - run: cd $WORKDIR && ansible-test coverage html --requirements
+      - run: cd $WORKDIR && ansible-test coverage report --omit 'tests/*' --show-missing
 
   integration-test:
     runs-on: [self-hosted]
