--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -2,6 +2,24 @@ name: CI tests
 on:
   - push
 jobs:
+  docs:
+    runs-on: [self-hosted]
+    container: python:3.10-slim-buster
+    env:
+      WORKDIR: /work-dir/ansible_collections/scale_computing/hypercore
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - run: pip3 install -r sanity.requirements -r test.requirements -r docs.requirements
+      - run: apt update
+      - run: apt install -y git make
+        # ansible-test needs special directory structure.
+      - run: mkdir -p $WORKDIR
+      - run: cp -a ./  $WORKDIR
+        #
+      - run: cd $WORKDIR && make docs
+      - run: cd $WORKDIR && ls -al docs/build/html
+
   sanity-test:
     runs-on: [self-hosted]
     container: python:3.10-slim-buster
