--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -59,7 +59,7 @@ jobs:
       - run: cp -a ./  $WORKDIR
         # Same as "make units"
         # TODO reuse Makefile
-      - run: cd $WORKDIR && ansible-test units --docker --coverage
+      - run: cd $WORKDIR && ansible-test units --coverage
       - run: cd $WORKDIR && ansible-test coverage html --requirements
       - run: cd $WORKDIR && ansible-test coverage report --omit 'tests/*' --show-missing
 
