--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -62,6 +62,14 @@ jobs:
   integration-test:
     runs-on: [self-hosted]
     container: python:3.10-slim-buster
+    env:
+      SC_HOST: ${{ secrets.SC_HOST }}
+      SC_USERNAME: ${{ secrets.SC_USERNAME }}
+      SC_PASSWORD: ${{ secrets.SC_PASSWORD }}
+      SMB_SERVER: ${{ secrets.SMB_SERVER }}
+      SMB_SHARE: ${{ secrets.SMB_SHARE }}
+      SMB_USERNAME: ${{ secrets.SMB_USERNAME }}
+      SMB_PASSWORD: ${{ secrets.SMB_PASSWORD }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
