--- a/tests/integration/targets/vm_replication_info/tasks/main.yml
+++ b/tests/integration/targets/vm_replication_info/tasks/main.yml
@@ -6,6 +6,18 @@
 
   block:
 # -------------------------------------------------------------------------
+# Test vm_replication_info for not present VM
+    - name: Get replication info for one VM
+      scale_computing.hypercore.vm_replication_info:
+        vm_name: XLAB-vm_replication_info_CI_test-bf238ai6d2
+      register: replication_info
+      ignore_errors: true
+    - ansible.builtin.assert:
+        that:
+          - replication_info is failed
+          - replication_info is not changed
+
+# -------------------------------------------------------------------------
 # Create 1st VM
     - name: Delete XLAB-vm_replication_info_CI_test
       scale_computing.hypercore.vm: &delete-XLAB-vm_nic_CI_test
@@ -90,6 +102,8 @@
 
 # -------------------------------------------------------------------------
 # Test vm_replication_info for VM without replication
+# Module fails if VM with given name is not present,
+# and does not fail if only replication is not configured.
     - name: Get replication info for one VM
       scale_computing.hypercore.vm_replication_info:
         vm_name: XLAB-vm_replication_info_CI_test
@@ -98,10 +112,7 @@
         that:
           - replication_info is succeeded
           - replication_info is not changed
-          - replication_info.records | length == 1
-          - replication_info.records[0].vm_name == 'XLAB-vm_replication_info_CI_test'
-          - replication_info.records[0].state == 'enabled'
-          - replication_info.records[0].remote_cluster == "{{ cluster_connection_info.record.0.remoteClusterInfo.clusterName }}"
+          - replication_info.records | length == 0
 
 # -------------------------------------------------------------------------
     - name: Create replication
