--- a/tests/integration/targets/vm_replication_info/tasks/main.yml
+++ b/tests/integration/targets/vm_replication_info/tasks/main.yml
@@ -184,3 +184,18 @@
           - replication_info_all.records[1].state in ['enabled', 'disabled']
           - replication_info_all.records[1].remote_cluster
 
+    - name: Delete XLAB-vm_replication_info_CI_test
+      scale_computing.hypercore.vm: *delete-XLAB-vm_nic_CI_test
+      register: output
+    - ansible.builtin.assert:
+        that:
+          - output is succeeded
+          - output is changed
+
+    - name: Delete XLAB-vm2_replication_info_CI_test
+      scale_computing.hypercore.vm: *delete-XLAB-vm2_nic_CI_test
+      register: output
+    - ansible.builtin.assert:
+        that:
+          - output is succeeded
+          - output is changed
