Update test for tiering_priority_factor value
Test cluster might or might not support tiering.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/vm_git_issues/tasks/issue_15_tiering_priority.yml
+++ b/tests/integration/targets/vm_git_issues/tasks/issue_15_tiering_priority.yml
@@ -39,7 +39,9 @@
     that:
       - source_info.records | length == 1
       - source_info.records.0.power_state == "stopped"
-      - source_info.records.0.disks.0.tiering_priority_factor == 0
+      # The value is 0 if test cluster does not support tiering,
+      # and 4 (default set by HyperCore side) if test cluster does support tiering.
+      - source_info.records.0.disks.0.tiering_priority_factor in [0, 4]
 
 - name: Create a source running VM
   scale_computing.hypercore.vm:
