--- a/tests/integration/targets/vm_git_issues/tasks/issue_15_tiering_priority.yml
+++ b/tests/integration/targets/vm_git_issues/tasks/issue_15_tiering_priority.yml
@@ -31,6 +31,37 @@
       - vm_created is changed
       - vm_created is succeeded
 
+# ------------------------------------------------------------------------------------
+# Wait on VM tieringPriorityFactor to change if needed
+- name: Get XLAB-test-tiering-priority info via api
+  scale_computing.hypercore.api:
+    action: get
+    endpoint: /rest/v1/VirDomain/{{vm_created.record.createdUUID}}
+  register: result
+- ansible.builtin.assert:
+    that:
+      - result.record.0.name == "XLAB-test-tiering-priority"
+      # HC3 values
+      - result.record.0.blockDevs.0.tieringPriorityFactor in [0, 8]
+
+# 5 sec was not enough :/
+- name: Wait N sec - tieringPriorityFactor should change
+  ansible.builtin.pause:
+    seconds: 30
+
+- name: Get XLAB-test-tiering-priority info via api
+  scale_computing.hypercore.api:
+    action: get
+    endpoint: /rest/v1/VirDomain/{{vm_created.record.createdUUID}}
+  register: result
+- ansible.builtin.assert:
+    that:
+      - result.record.0.name == "XLAB-test-tiering-priority"
+      # HC3 values
+      - result.record.0.blockDevs.0.tieringPriorityFactor == 8
+
+# ------------------------------------------------------------------------------------
+
 - name: Retrieve XLAB-test-tiering-priority
   scale_computing.hypercore.vm_info:
     vm_name: XLAB-test-tiering-priority
@@ -39,8 +70,6 @@
     that:
       - source_info.records | length == 1
       - source_info.records.0.power_state == "stopped"
-      # The value is 0 if test cluster does not support tiering,
-      # and 4 (default set by HyperCore side) if test cluster does support tiering.
       - source_info.records.0.disks.0.tiering_priority_factor in [0, 4]
 
 - name: Create a source running VM
