Fail example playbook if any VM wiht IDE disk is found
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/examples/list_vms_with_ide_disk.yml
+++ b/examples/list_vms_with_ide_disk.yml
@@ -19,7 +19,7 @@
       ansible.builtin.debug:
         msg: "All VMs count={{ all_vms.records | length }}"
 
-    - name: Loop
+    - name: Find VMs with IDE disk
       ansible.builtin.shell: |
         #!/usr/bin/env python
         # print("in-python")
@@ -48,3 +48,8 @@
     - name: Show all VMs with IDE disk
       ansible.builtin.debug:
         msg: "IDE VMs count={{ ide_vm_names | length }} names={{ ide_vm_names | to_json }}"
+
+    - name: Fail if any VM uses IDE disk
+      ansible.builtin.fail:
+        msg: "Found {{ ide_vm_names | length }} VMs using IDE disk"
+      when: ide_vm_names | length > 0
