Add 'changed=True' when detaching the ISO

--- a/tests/integration/targets/vm_disk/tasks/main.yml
+++ b/tests/integration/targets/vm_disk/tasks/main.yml
@@ -185,7 +185,7 @@
     - ansible.builtin.assert:
         that:
           - result is succeeded
-          # - result is changed
+          - result is changed
           - result.record.0.iso_name == ""
 
     - name: Assert that ISO image isn't mounted on vm-integration-test-disks anymore
