--- a/tests/integration/targets/vm_disk/tasks/main.yml
+++ b/tests/integration/targets/vm_disk/tasks/main.yml
@@ -25,6 +25,7 @@
         state: present
         disks: [ ]
         nics: [ ]
+        machine_type: BIOS
       register: result
     - ansible.builtin.assert:
         that:
