--- a/tests/integration/targets/vm_git_issues/tasks/issue_15_tiering_priority.yml
+++ b/tests/integration/targets/vm_git_issues/tasks/issue_15_tiering_priority.yml
@@ -82,6 +82,7 @@
       - Integration
     vcpu: 2
     state: present
+    machine_type: BIOS
     power_state: start
     disks:
     - type: virtio_disk
