--- a/tests/integration/targets/vm_git_issues/tasks/issue_4_vcpu_set_to_0.yml
+++ b/tests/integration/targets/vm_git_issues/tasks/issue_4_vcpu_set_to_0.yml
@@ -18,6 +18,7 @@
       - Integration
     vcpu: 2
     state: present
+    machine_type: BIOS
     power_state: stop
     disks:
     - type: virtio_disk
