--- a/tests/integration/targets/vm_node_affinity/tasks/main.yml
+++ b/tests/integration/targets/vm_node_affinity/tasks/main.yml
@@ -18,6 +18,7 @@
         vm_name: XLAB-vm_node_affinity_CI_test
         description: Demo VM
         power_state: stop
+        machine_type: BIOS
         state: present
         tags:
           - 'Xlab'
