--- a/tests/integration/targets/vm_git_issues/tasks/issue_7_problem_with_power_state.yml
+++ b/tests/integration/targets/vm_git_issues/tasks/issue_7_problem_with_power_state.yml
@@ -18,6 +18,7 @@
       - Integration
     vcpu: 0
     state: present
+    machine_type: BIOS
     power_state: stop
     disks:
     - type: virtio_disk
