--- a/tests/integration/targets/vm_git_issues/tasks/main.yml
+++ b/tests/integration/targets/vm_git_issues/tasks/main.yml
@@ -8,4 +8,5 @@
     - include_tasks: issue_7_problem_with_power_state.yml
     - include_tasks: issue_4_vcpu_set_to_0.yml
     - include_tasks: issue_15_tiering_priority.yml
+    - include_tasks: issue_11_empty_ide_cdrom.yml
 # TODO: add more tasks here when more issues are fixed.
