--- a/tests/integration/targets/vm_git_issues/tasks/issue_12_machine_types.yml
+++ b/tests/integration/targets/vm_git_issues/tasks/issue_12_machine_types.yml
@@ -60,6 +60,8 @@
     disks:
     - type: ide_cdrom
       disk_slot: 0
+    - type: nvram
+      disk_slot: -1
     nics: []
   register: output
 - ansible.builtin.assert:
@@ -76,13 +78,47 @@
       - source_info.records | length == 1
       - source_info.records.0.power_state == "stopped"
       - source_info.records.0.machine_type == "UEFI"
-      - source_info.records.0.disks | length == 1
+      - source_info.records.0.disks | length == 2
       - source_info.records.0.disks.0.type == "ide_cdrom"
       - source_info.records.0.disks.0.disk_slot == 0
+      - source_info.records.0.disks.1.type == "nvram"
+      - source_info.records.0.disks.1.disk_slot == -1 # NVRAM does not "have" a slot
       - source_info.records.0.vcpu == 2
 
+- name: Try make source vm - UEFI without nvram.
+  scale_computing.hypercore.vm:
+    vm_name: XLAB-test-machine-type-uefi-no-nvram
+    memory: "{{ '1 GB'|human_to_bytes}}"
+    description: "blabla"
+    tags:
+      - Xlab
+      - Integration
+    vcpu: 2
+    state: present
+    machine_type: UEFI
+    power_state: stop
+    disks:
+    - type: ide_cdrom
+      disk_slot: 0
+    nics: []
+  ignore_errors: True
+  register: output
+- ansible.builtin.assert:
+    that:
+      - output is not changed
+      - output is not succeeded
+      - output.msg == "Machine of type UEFI requires NVRAM disk."
+
+- name: Retrieve XLAB-test-machine-type-uefi-no-nvram
+  scale_computing.hypercore.vm_info:
+    vm_name: XLAB-test-machine-type-uefi-no-nvram
+  register: source_info
+- ansible.builtin.assert:
+    that:
+      - source_info.records | length == 0
+
 # TODO: vTPM+UEFI machine type is not yet supported on this API version.
-# TODO: Uncomment when
+# TODO: Uncomment when VTPM is implemented.
 #- name: Make source vm - vTPM+UEFI
 #  scale_computing.hypercore.vm:
 #    vm_name: XLAB-test-machine-type-vTPM+UEFI
@@ -98,6 +134,12 @@
 #    disks:
 #    - type: ide_cdrom
 #      disk_slot: 0
+#    - type: nvram
+#      disk_slot: 1
+#      size: "{{ '200 GB' | human_to_bytes }}"
+#    - type: vtpm
+#      disk_slot: 2
+#      size: "{{ '200 GB' | human_to_bytes }}"
 #    nics: []
 #  register: output
 #- ansible.builtin.assert:
@@ -167,6 +209,8 @@
     disks:
     - type: ide_cdrom
       disk_slot: 0
+    - type: nvram
+      disk_slot: -1
     nics: []
   register: output
 - ansible.builtin.assert:
@@ -181,15 +225,17 @@
 - ansible.builtin.assert:
     that:
       - source_info.records | length == 1
-      - source_info.records.0.vcpu == 2
       - source_info.records.0.power_state == "stopped"
-      - source_info.records.0.disks | length == 1
+      - source_info.records.0.machine_type == "UEFI"
+      - source_info.records.0.disks | length == 2
       - source_info.records.0.disks.0.type == "ide_cdrom"
       - source_info.records.0.disks.0.disk_slot == 0
-      - source_info.records.0.machine_type == "UEFI"
+      - source_info.records.0.disks.1.type == "nvram"
+      - source_info.records.0.disks.1.disk_slot == -1 # NVRAM does not "have" a slot
+      - source_info.records.0.vcpu == 2
 
 # TODO: vTPM+UEFI machine type is not yet supported on this API version.
-# TODO: Uncomment when
+# TODO: Uncomment when VTPM is implemented.
 #- name: Make source vm - vTPM+UEFI (Idempotence)
 #  scale_computing.hypercore.vm:
 #    vm_name: XLAB-test-machine-type-vTPM+UEFI
@@ -205,14 +251,20 @@
 #    disks:
 #    - type: ide_cdrom
 #      disk_slot: 0
+#    - type: nvram
+#      disk_slot: 1
+#      size: "{{ '200 GB' | human_to_bytes }}"
+#    - type: vtpm
+#      disk_slot: 2
+#      size: "{{ '200 GB' | human_to_bytes }}"
 #    nics: []
 #  register: output
 #- ansible.builtin.assert:
 #    that:
-#      - output is not changed
+#      - output is changed
 #      - output is succeeded
 
-#- name: Retrieve XLAB-test-machine-type-vTPM+UEFI
+#- name: Retrieve XLAB-test-machine-type-vTPM+UEFI (Idempotence)
 #  scale_computing.hypercore.vm_info:
 #    vm_name: XLAB-test-machine-type-vTPM+UEFI
 #  register: source_info
