changing to failed from not succeeded.

--- a/tests/integration/targets/vm_git_issues/tasks/issue_12_machine_types.yml
+++ b/tests/integration/targets/vm_git_issues/tasks/issue_12_machine_types.yml
@@ -106,7 +106,7 @@
 - ansible.builtin.assert:
     that:
       - output is not changed
-      - output is not succeeded
+      - output is failed
       - output.msg == "Machine of type UEFI requires NVRAM disk."
 
 - name: Retrieve XLAB-test-machine-type-uefi-no-nvram
