--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -97,8 +97,9 @@ jobs:
       - run: cd $WORKDIR && ansible-test integration
 
   replica_cleanup:
-    needs:
-      - integration-test
+    # TEMP
+    #needs:
+    #  - integration-test
     runs-on: [self-hosted]
     container: python:3.10-slim-buster
     env:
@@ -119,4 +120,5 @@ jobs:
         # ansible-test needs special directory structure.
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
+      - run: ansible-galaxy collection install community.general
       - run: cd $WORKDIR && ansible-playbook tests/integration/ci_replica_cleanup.yml
