CI remove temporal change
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -97,9 +97,8 @@ jobs:
       - run: cd $WORKDIR && ansible-test integration
 
   replica_cleanup:
-    # TEMP
-    #needs:
-    #  - integration-test
+    needs:
+      - integration-test
     runs-on: [self-hosted]
     container: python:3.10-slim-buster
     env:
