--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -25,4 +25,4 @@ jobs:
         # ansible-test needs special directory structure.
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
-      - run: cd $WORKDIR/tests/integration && sh cleanup.sh ${SMB_SERVER}
+      - run: cd $WORKDIR/tests/integration && sh smb_cleanup.sh ${SMB_SERVER}
