--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -26,4 +26,4 @@ jobs:
         # ansible-test needs special directory structure.
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
-      - run: cd $WORKDIR/tests/integration && sh smb_cleanup.sh ${SMB_SERVER}
+      - run: cd $WORKDIR/tests/integration && ./smb_cleanup.sh
